--- a/style.css
+++ b/style.css
@@ -56,6 +56,15 @@ body {
   /* width: 180px; */
   height: 100%;
   background-color: rgb(255, 255, 255);
+
+}
+.product-card:nth-child(odd) {
+  height: auto;
+  position: relative;
+  width: 200px;
+  /* width: 180px; */
+  height: 100%;
+  background-color: rgb(255, 255, 255);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -64,8 +73,8 @@ body {
   position: absolute;
   margin: 15px;
   color: #ffff;
-  font-size: 10px; 
-  font-weight: bold; 
+  font-size: 10px;
+  font-weight: bold;
   padding: 2px 9px;
   border-radius: 3px;
   border: 1px solid #e74040;
@@ -81,38 +90,44 @@ body {
 }
 
 .icon-heart {
-    width: 30px;
-    height: 30px;
-    border-radius: 20px;
+  width: 30px;
+  height: 30px;
+  border-radius: 20px;
   padding: 5px 5px;
   background: linear-gradient(90deg, #0000ff, #ff0000);
   border: 1px;
   display: flex;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 .icon-cart {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 20px;
   padding: 5px 5px;
   background: linear-gradient(90deg, #ffa500, #bd4f42, #800080);
   border: 1px;
 }
 .icon-view {
-    width: 30px;
-    height: 30px;
+  width: 30px;
+  height: 30px;
   border-radius: 20px;
   padding: 5px 5px;
   background: linear-gradient(90deg, #008000, #ffff00);
   border: 1px;
 }
 
-.product-card img {
+.product-card:nth-child(odd) img {
   width: 100%;
   /* height: ; */
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+}
+.product-card img {
+  width: 100%;
+  /* height: ; */
+  /* border-top-left-radius: 20px;
+  border-top-right-radius: 20px; */
 }
 
 .card-content {
@@ -163,9 +178,9 @@ body {
   font-size: 13px;
   margin-bottom: 10px;
   font-weight: bold;
-  color: #000; 
+  color: #000;
   display: -webkit-box;
-  -webkit-line-clamp: 2; 
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -176,7 +191,7 @@ body {
   font-size: 11px;
   margin-bottom: 10px;
   font-weight: bold;
-  color: #737373; 
+  color: #737373;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
@@ -234,9 +249,11 @@ body {
   margin-bottom: 2px;
 }
 
-
-
 @media (max-width: 480px) {
+  body {
+    background: #00a6ff;
+  }
+
   #header h1 {
     font-size: 20px;
   }
@@ -245,10 +262,9 @@ body {
     color: #f6f6f6;
     font-weight: 200;
     font-size: 12px;
-    max-width: 100%;    
+    max-width: 100%;
     /* line-height: 1.;    */
     overflow: hidden;
     display: block;
   }
-
 }
