--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   gap: 20px;
   padding: 20px;
   width: 100%;
-  /* height: 90px; */
+  height: 50%;
   overflow-x: auto;
   white-space: nowrap;
 }
@@ -227,7 +227,7 @@ body {
   margin-top: 20px;
   display: flex;
   border: 1px solid #7a9e62;
-  padding: 3px 6px;
+  padding: 5px 8px;
   border-radius: 25px;
   align-items: center;
   /* justify-content: center; */
