--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   overflow-x: auto;
   white-space: nowrap;
   direction: rtl;
-
+  
 }
 .products::-webkit-scrollbar {
   display: none;
@@ -58,6 +58,7 @@ body {
   /* width: 180px; */
   height: 100%;
   background-color: rgb(255, 255, 255);
+  direction: ltr;
 
 }
 .product-card:nth-child(odd) {
