--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0;
+  margin:0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
@@ -18,8 +18,9 @@ body {
   flex-direction: column;
   gap: 15px;
   width: 60%;
-  margin: 20px;
-  margin-top: 50px;
+  margin: 2px;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 #header h6 {
@@ -30,6 +31,7 @@ body {
   color: #f6f6f6;
   font-weight: 400;
   font-size: 14px;
+  width: 50%;
 }
 
 #header h1 {
@@ -39,10 +41,10 @@ body {
 
 .products {
   display: flex;
-  gap: 20px;
+  gap: 30px;
   padding: 20px;
-  width: 100%;
-  height: 50%;
+  /* width: 100%;
+  height: 50%; */
   overflow-x: auto;
   white-space: nowrap;
   direction: rtl;
@@ -52,21 +54,16 @@ body {
   display: none;
 }
 .product-card {
-  height: auto;
+  flex: 0 0 calc(130% / 4 - 180px); 
   position: relative;
   width: 200px;
-  /* width: 180px; */
-  height: 100%;
+  height: 490px;
   background-color: rgb(255, 255, 255);
   direction: ltr;
 
 }
 .product-card:nth-child(odd) {
-  height: auto;
   position: relative;
-  width: 200px;
-  /* width: 180px; */
-  height: 100%;
   background-color: rgb(255, 255, 255);
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -84,8 +81,9 @@ body {
   background-color: #e74040;
 }
 .icon-container {
+
   position: absolute;
-  bottom: 50%;
+  bottom: 48%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -93,6 +91,7 @@ body {
 }
 
 .icon-heart {
+  cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 20px;
@@ -104,6 +103,7 @@ body {
   justify-content: center;
 }
 .icon-cart {
+  cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 20px;
@@ -112,6 +112,7 @@ body {
   border: 1px;
 }
 .icon-view {
+  cursor: pointer;
   width: 30px;
   height: 30px;
   border-radius: 20px;
@@ -128,7 +129,7 @@ body {
 }
 .product-card img {
   width: 100%;
-  /* height: ; */
+  height:55% ;
   /* border-top-left-radius: 20px;
   border-top-right-radius: 20px; */
 }
@@ -259,6 +260,7 @@ body {
 
   .icon-container{
     margin-bottom: 20px;
+    bottom: 45%;
   }
 
   #header h1 {
@@ -269,7 +271,7 @@ body {
     color: #f6f6f6;
     font-weight: 200;
     font-size: 12px;
-    max-width: 100%;
+width: 80%;    /* max-width: 100%; */
     /* line-height: 1.;    */
     overflow: hidden;
     display: block;
