--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  width: 60%;
+  max-width: 80%;
   margin: 2px;
   margin-left: 20px;
   margin-top: 20px;
@@ -54,7 +54,7 @@ body {
   display: none;
 }
 .product-card {
-  flex: 0 0 calc(130% / 4 - 180px); 
+  flex: 0 0 calc(140% / 4 - 180px); 
   position: relative;
   width: 200px;
   height: 490px;
